# Aaether-Engine-SDK

./: CMakeLists.txt  main.cpp  stdafx.h
cmake/Modules/: FindCEGUI.cmake
common/: CMakeLists.txt  application.cpp  application.hpp  controls.cpp  controls.hpp  data_manager.cpp  data_manager.hpp  pipeline.cpp  pipeline.hpp  resource_loader.cpp  resource_loader.hpp  screen_render.cpp  screen_render.hpp  technique.cpp  technique.hpp
common/base/: CMakeLists.txt  base_component.hpp  base_entity_instance.hpp  base_instance_info.hpp  base_model_loader.hpp  base_module.cpp  base_module.hpp  base_resource_loader.cpp  base_resource_loader.hpp  base_state_saver.hpp
common/camera_implementation/: CMakeLists.txt  camera.cpp  camera.hpp
common/components/: CMakeLists.txt  general_entity_info_component.cpp  general_entity_info_component.hpp  model_component.cpp  model_component.hpp
common/controller/: CMakeLists.txt  controls_source.cpp  controls_source.hpp
common/converter/: CMakeLists.txt  assimp_converter.cpp  assimp_converter.hpp
common/crypt/: BlowFish.cpp  Blowfish.h  CMakeLists.txt
common/entity/: CMakeLists.txt  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp
common/entity/palette/: CMakeLists.txt  entity_palette.cpp  entity_palette.hpp
common/entity/ui/: CMakeLists.txt  scene_outliner.cpp  scene_outliner.hpp  ui_transform_tab.cpp  ui_transform_tab.hpp
common/entity_info/: CMakeLists.txt  transform_info.cpp  transform_info.hpp
common/entity_instance/: CMakeLists.txt  entity_instance.cpp  entity_instance.hpp
common/filters/: CMakeLists.txt  basic_filter.cpp  basic_filter.hpp  blur.cpp  blur.hpp  dof.cpp  dof.hpp  exponential_shadow_map.cpp  exponential_shadow_map.hpp  fxaa.cpp  fxaa.hpp  g_buffer.cpp  g_buffer.hpp  hdr.cpp  hdr.hpp  ssao.cpp  ssao.hpp
common/light/: CMakeLists.txt  light.cpp  light.hpp
common/mesh_implementation/: CMakeLists.txt  mesh_drawer.cpp  mesh_drawer.hpp  mesh_shader.cpp  mesh_shader.hpp  mesh_wrapper.cpp  mesh_wrapper.hpp
common/model_loaders/: CMakeLists.txt  aaether_loader.cpp  aaether_loader.hpp
common/settings/: CMakeLists.txt  environment.cpp  environment.hpp  filter_settings.cpp  filter_settings.hpp  scene_info.cpp  scene_info.hpp
common/shader/: CMakeLists.txt  shader.cpp  shader.hpp
common/sky_implementation/: CMakeLists.txt  sky_render.cpp  sky_render.hpp  sky_wrapper.cpp  sky_wrapper.hpp
common/terrain/: CMakeLists.txt  quad_tree.cpp  quad_tree.hpp  terrain.cpp  terrain.hpp  terrain_strip.cpp  terrain_strip.hpp
common/terrain_implementation/: CMakeLists.txt  terrain_shader.cpp  terrain_shader.hpp  terrain_wrapper.cpp  terrain_wrapper.hpp
common/texture/: CMakeLists.txt  texture.cpp  texture.hpp
common/ui/: CMakeLists.txt  ui_manager.cpp  ui_manager.hpp  ui_util.cpp  ui_util.hpp
common/ui_implementation/: CMakeLists.txt  filter_root.cpp  filter_root.hpp  lighting_root.cpp  lighting_root.hpp  project_root.cpp  project_root.hpp  settings_root.cpp  settings_root.hpp  top_root.cpp  top_root.hpp  ui_root.cpp  ui_root.hpp  view_root.cpp  view_root.hpp
common/util/: CMakeLists.txt  file_helper.cpp  file_helper.hpp  math_helper.cpp  math_helper.hpp  string_helper.cpp  string_helper.hpp  utils.cpp  utils.hpp  view.cpp  view.hpp
data/: map1.AAETHER  settings.xml
data/granny_sdk_textures/: Bow46.tga  Ice.dds  Spada16.tga  Spada67.tga  Spadone16.tga  Sura7.tga  body_m20.dds  brakian_t00_ori.tga  cavallo_di_ade.tga  chaman_botas_f.tga  chaman_botas_m.tga  chaman_cuerpo_f.tga  chaman_cuerpo_m.tga  chaman_elec_f.tga  chaman_elec_m.tga  corpo.tga  female_pal2_fur.dds  female_pal2_metal.dds  female_pal2_trans.dds  female_pal_lv2_eye.dds  giant_pal2_belly.dds  hand_m20.dds  icon_paladin_m.tga  leg_m20.dds  leone_baso.tga  mani.tga  manosura_f.dds  mont_1.tga  mount_baso_mw.tga  mount_baso_mw2.tga  mount_by_elfer_01.dds  mount_by_elfer_02.dds  mount_by_elfer_03.dds  mount_by_elfer_04.dds  ninja_botas_f.tga  ninja_cuerpo_f.tga  ninja_elec_f.tga  ninja_elec_m.tga  pantaloni.tga  peri.tga  (+35 more)
data/objects/leafA/: general_info.ainfo  leafA.aam  leafA.aao
data/objects/mushA/: general_info.ainfo  mushA.aao
data/objects/mushB/: general_info.ainfo
data/objects/mushC/: general_info.ainfo  mushC.aam
data/objects/roundA/: general_info.ainfo  roundA.aam  roundA.aao
data/objects/sphere/: general_info.ainfo  skybox.aam  skybox.aao
data/shaders/: 2d_frag.txt  2d_vert.txt  add_frag.txt  add_vert.txt  bright_filter_frag.txt  filter-null_frag.txt  fxaa_frag.txt  fxaa_vert.txt  gamma_correction_frag.txt  gamma_correction_vert.txt  gaus_blur_frag.txt  gaus_blur_frag2.txt  gaus_blur_vert.txt  geometry_pass_frag.txt  geometry_pass_vert.txt  light_frag.txt  mesh_frag.txt  mesh_vert.txt  mult_frag.txt  procedural_frag.txt  shadow_frag.txt  shadow_sample_frag.txt  shadow_vert.txt  skybox_frag.txt  skybox_vert.txt  ssao_blur_frag.txt  ssao_frag.txt  ssao_vert.txt  terrain_frag.txt  terrain_vert.txt
data/terrain_files/: map1.terra  test.env  test.fsettings
data/texture_sets/: map1.aset  map1.nset  map1.tset
data/ui/: test.project
data/ui/imagesets/: GlossySerpent.imageset  GlossySerpentCursors.imageset
data/ui/layouts/: dof.layout  fxaa.layout  hdr.layout  lighting.layout  shadows.layout  ssao.layout  ui.layout
data/ui/looknfeel/: GlossySerpent.Amber.looknfeel  GlossySerpent.Default.looknfeel  GlossySerpent.Jade.looknfeel  GlossySerpent.looknfeel  GlossySerpentFHD.Amber.looknfeel  GlossySerpentFHD.Default.looknfeel  GlossySerpentFHD.looknfeel  (+1 more)
include/CEGUI/: Config.h  ModuleConfig.h
lib/: CEGUIBase-0.lib  CEGUICommonDialogs-0.lib  CEGUIOpenGLRenderer-0.lib  FreeImaged.lib  assimpd.lib  freetype.lib  libboost_filesystem-vc120-mt-1_58.lib  libboost_system-vc120-mt-1_58.lib
(+5 files in other folders)
