file(GLOB Sources *.cpp *.hpp)
add_library(common STATIC ${Sources})



add_subdirectory(base)
add_subdirectory(camera_implementation)
add_subdirectory(components)
add_subdirectory(controller)
add_subdirectory(converter)
add_subdirectory(crypt)
add_subdirectory(entity)
add_subdirectory(entity_info)
add_subdirectory(entity_instance)
add_subdirectory(filters)
add_subdirectory(light)
add_subdirectory(mesh_implementation)
add_subdirectory(model_loaders)
add_subdirectory(settings)
add_subdirectory(shader)
add_subdirectory(sky_implementation)
add_subdirectory(terrain)
add_subdirectory(terrain_implementation)
add_subdirectory(texture)
add_subdirectory(ui)
add_subdirectory(ui_implementation)
add_subdirectory(util)